# simbirsoft_sdet

./: .gitignore  README.md  docker-compose.yaml  pyproject.toml
pages/: base_page.py  yandex_mail_page.py
tests/: .example.env  conftest.py  test_yandex_mail.py
tests/pages/: base_page.py  locators.py  yandex_mail_page.py
